[gd_scene load_steps=7 format=3 uid="uid://bs6u4l08gmv0e"]

[ext_resource type="Script" uid="uid://dxygniad11rib" path="res://scenes/objects/static/exit_door/exit_door.gd" id="1_8q72p"]
[ext_resource type="ArrayMesh" uid="uid://dviwtwi8t6wrr" path="res://scenes/objects/static/exit_door/outsidedoor.obj" id="3_cfljt"]
[ext_resource type="PackedScene" uid="uid://bo14vsfgv7h33" path="res://scenes/objects/triggers/interaction/interaction_cube.tscn" id="3_pp4nk"]

[sub_resource type="BoxShape3D" id="BoxShape3D_pp4nk"]
size = Vector3(0.15332, 2.82669, 1.94824)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pp4nk"]
albedo_color = Color(0.520505, 0.600092, 0.676755, 1)
metallic = 0.16
roughness = 0.38

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pp4nk"]
bg_color = Color(0, 0, 0, 0.443137)

[node name="ExitDoor" type="StaticBody3D" node_paths=PackedStringArray("confirm_ui", "idiot_ui")]
script = ExtResource("1_8q72p")
confirm_ui = NodePath("CanvasLayer/Control/Confirm")
idiot_ui = NodePath("CanvasLayer/Control/Idiot")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.24107, -0.106445)
shape = SubResource("BoxShape3D_pp4nk")

[node name="Model" type="Node3D" parent="."]

[node name="Outsidedoor" type="MeshInstance3D" parent="Model"]
transform = Transform3D(-3.5466e-08, 0, -0.811368, 0, 0.811368, 0, 0.811368, 0, -3.5466e-08, -0.0168967, 1.2221, -0.107064)
mesh = ExtResource("3_cfljt")
surface_material_override/0 = SubResource("StandardMaterial3D_pp4nk")

[node name="InteractionCube" parent="." instance=ExtResource("3_pp4nk")]
transform = Transform3D(0.415, 0, 0, 0, 1.505, 0, 0, 0, 1, 0, 1.062, -0.09)
interaction_name = "exit cinema and finish movie"
interaction_keybind = "click"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Confirm" type="PanelContainer" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pp4nk")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Confirm"]
layout_mode = 2
theme_override_constants/separation = 35
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/Confirm/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
text = "Are you sure you would like to exit the cinema and watch your movie?
When you leave, your movie will be complete and no further changes will be possible."
fit_content = true
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/Confirm/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 41
alignment = 1

[node name="CompleteMovie" type="Button" parent="CanvasLayer/Control/Confirm/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Complete movie"

[node name="ContinueFilming" type="Button" parent="CanvasLayer/Control/Confirm/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Continue filming"

[node name="Idiot" type="PanelContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pp4nk")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Idiot"]
layout_mode = 2
theme_override_constants/separation = 35
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/Idiot/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
text = "You need to record a movie before leaving the cinema!"
fit_content = true
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/Idiot/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 41
alignment = 1

[node name="Forgor" type="Button" parent="CanvasLayer/Control/Idiot/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "whoops, i forgor"

[connection signal="interaction_triggered" from="InteractionCube" to="." method="_on_interaction_triggered"]
[connection signal="pressed" from="CanvasLayer/Control/Confirm/VBoxContainer/HBoxContainer/CompleteMovie" to="." method="_on_complete_movie_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Confirm/VBoxContainer/HBoxContainer/ContinueFilming" to="." method="_on_continue_filming_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Idiot/VBoxContainer/HBoxContainer/Forgor" to="." method="_on_forgor_pressed"]
